Fixed a small overlapping bug with the bottom

--- a/src/components/PortfolioAppList.css
+++ b/src/components/PortfolioAppList.css
@@ -125,6 +125,7 @@
 
 @media (max-width: 1023px) {
     .labels-container h3 { max-width: 128px; }
+    .PortfolioAppList { margin-bottom: 8rem; }
 }
 
 /* Mobile Styles */
